Use LinkedList instead of ArrayList